added landing page, styling and several assets

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: #262e34;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+@font-face {
+  font-family: "Anta";
+  src: url("/assets/fonts/anta.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Josefin Sans";
+  src: url("/assets/fonts/josefin-sans.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
