added content to the why me section

--- a/src/app/main-content/why-me/why-me.component.html
+++ b/src/app/main-content/why-me/why-me.component.html
@@ -1,1 +1,21 @@
-<section></section>
+<section>
+  <h2>Why me</h2>
+  <div class="text-container">
+    <div class="left-side">
+      <img src="./assets/img/icons/location-icon.png" alt="" />
+      <span class="blue">I am </span><span> located near Graz..|</span>
+    </div>
+    <div class="right-side">
+      <span
+        >Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, amet odit
+        praesentium ullam, ab totam adipisci voluptates sequi, accusantium
+        tempore blanditiis nesciunt exercitationem delectus aliquid expedita
+        voluptatibus nobis ex quidem.</span
+      >
+
+      <a class="btn-container" href="#contact">
+        <button>Let's talk</button>
+      </a>
+    </div>
+  </div>
+</section>
