fixed header design and functionality

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,25 +1,37 @@
 <section>
   <header class="header">
-    <div class="logo-container">
+    <a class="logo-container" (click)="scrollToTop($event)">
       <img src="./assets/img/icons/logo-dark.svg" alt="" />
       <span class="anta">M.Hofer</span>
       <span class="blue font-14">developer</span>
-    </div>
+    </a>
 
     <div class="nav-container">
       <nav class="nav-links">
-        <a href="#why-me" [class.active]="activeSection === 'why-me'">Why me</a>
-        <a href="#skills" [class.active]="activeSection === 'skills'">Skills</a>
-        <a href="#projects" [class.active]="activeSection === 'projects'"
+        <a
+          (click)="scrollToSection('why-me')"
+          [class.active]="activeSection === 'why-me'"
+          >Why me</a
+        >
+        <a
+          (click)="scrollToSection('skills')"
+          [class.active]="activeSection === 'skills'"
+          >Skills</a
+        >
+        <a
+          (click)="scrollToSection('projects')"
+          [class.active]="activeSection === 'projects'"
           >Projects</a
         >
-        <a href="#contact" [class.active]="activeSection === 'contact'"
+        <a
+          (click)="scrollToSection('contact')"
+          [class.active]="activeSection === 'contact'"
           >Contact</a
         >
       </nav>
     </div>
     <div>
-      <img src="./assets/img/icons/en-active.svg" alt="" />
+      <img class="de-en-switch" src="./assets/img/icons/en-active.svg" alt="" />
     </div>
   </header>
 </section>
