added several components to main

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,2 +1,4 @@
 <app-landing-page></app-landing-page>
 <app-why-me id="why-me"></app-why-me>
+<app-skills id="skills"></app-skills>
+<app-projects id="projects"></app-projects>
