fixed and finished landing page styling

--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -8,6 +8,44 @@
     <img class="portrait" src="./assets/img/portrait.png" alt="" />
   </div>
   <div class="right-side">
+    <div class="corner-icons">
+      <div class="icon-wrapper">
+        <img
+          src="./assets/img/icons/mail-icon.svg"
+          alt="Mail"
+          class="default"
+        />
+        <img
+          src="./assets/img/icons/mail-icon-hover.svg"
+          alt="Mail"
+          class="hover"
+        />
+      </div>
+      <div class="icon-wrapper">
+        <img
+          src="./assets/img/icons/github-icon.svg"
+          alt="GitHub"
+          class="default"
+        />
+        <img
+          src="./assets/img/icons/github-icon-hover.svg"
+          alt="GitHub"
+          class="hover"
+        />
+      </div>
+      <div class="icon-wrapper">
+        <img
+          src="./assets/img/icons/linkedin-icon.svg"
+          alt="LinkedIn"
+          class="default"
+        />
+        <img
+          src="./assets/img/icons/linkedin-icon-hover.svg"
+          alt="LinkedIn"
+          class="hover"
+        />
+      </div>
+    </div>
     <div class="logo-container">
       <img src="./assets/img/icons/logo-icon.svg" alt="" />
       <span class="anta">M.Hofer</span>
