--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -3,7 +3,7 @@ section {
   align-items: center;
   justify-content: center;
   gap: 100px;
-  margin-top: 100px;
+  margin-top: 70px;
   margin-left: 32px;
   margin-right: 32px;
 }
@@ -18,16 +18,14 @@ section {
 
 .left-side {
   width: 596px;
-  aspect-ratio: 1 / 1.2;
-  overflow: hidden;
+  aspect-ratio: 1 / 1.25;
   position: relative;
-
   .portrait {
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 520px;
+    width: 500px;
     object-fit: cover;
     object-position: top;
     z-index: 2;
@@ -38,7 +36,7 @@ section {
     top: 55%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(-25deg);
-    width: 809px;
+    width: 814px;
     z-index: 1;
   }
 }
@@ -48,8 +46,37 @@ section {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  position: relative;
   gap: 40px;
   color: #f8f5ec;
+  .corner-icons {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    .icon-wrapper {
+      position: relative;
+      width: 30px;
+      height: 30px;
+      img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transition: opacity 125ms;
+      }
+      .hover {
+        opacity: 0;
+      }
+      &:hover .default {
+        opacity: 0;
+      }
+      &:hover .hover {
+        opacity: 1;
+      }
+    }
+  }
   > h1 {
     font-size: 88px;
   }
@@ -57,7 +84,7 @@ section {
     font-size: 40px;
   }
   .down-arrow {
-    margin-top: 100px;
+    margin-top: 60px;
     width: 38px;
     border-radius: 18px;
     transition: background-color 125ms ease-in-out;
@@ -74,6 +101,7 @@ section {
   align-items: center;
   gap: 3px;
   font-size: 16px;
+  margin-top: 78px;
   > img {
     height: 32px;
     margin-bottom: 2px;
