finished texts and styling of why me and skills

--- a/src/app/main-content/skills/skills.component.html
+++ b/src/app/main-content/skills/skills.component.html
@@ -28,10 +28,9 @@
         />
       </div>
       <span
-        >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam nam
-        veritatis pariatur tempora? Aut ipsum molestias fugiat, temporibus autem
-        quae eos facere. Est, magnam. Recusandae voluptatibus amet deserunt aut
-        non?</span
+        >and I'm excited <br />
+        to show you more of that <br />
+        once I'm finished.</span
       >
     </div>
   </div>
