--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -3,8 +3,8 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px;
-  scroll-margin-top: 80px;
+  padding-top: 120px;
+  margin-bottom: 60px;
 }
 
 h2 {
@@ -16,15 +16,19 @@ h2 {
   justify-content: center;
   position: relative;
   gap: 80px;
-  margin: 0 130px;
+  margin: 0;
   .left-side {
     display: grid;
-    justify-content: end;
+    justify-content: center;
+    align-items: center;
     grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    width: 35%;
+    grid-template-rows: repeat(3, auto);
+    gap: 40px;
+    justify-items: center;
     > img {
-      height: 100px;
+      height: 120px;
+      object-fit: contain;
+      display: block;
     }
   }
   .right-side {
@@ -34,10 +38,10 @@ h2 {
     justify-content: center;
     position: relative;
     z-index: 1;
-    width: 35%;
-    height: 400px;
-    font-size: 18px;
-    gap: 16px;
+    height: 420px;
+    width: 380px;
+    font-size: 20px;
+    gap: 20px;
     .bg-shape {
       position: absolute;
       top: 0;
@@ -49,9 +53,9 @@ h2 {
     }
     .learn-icon-container {
       display: flex;
-      gap: 18px;
+      gap: 20px;
       .learn-icon {
-        height: 65px;
+        height: 68px;
       }
     }
 
