--- a/src/app/main-content/why-me/why-me.component.html
+++ b/src/app/main-content/why-me/why-me.component.html
@@ -7,12 +7,12 @@
     </div>
     <div class="right-side">
       <span
-        >Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, amet odit
-        praesentium ullam, ab totam adipisci voluptates sequi, accusantium
-        tempore blanditiis nesciunt exercitationem delectus aliquid expedita
-        voluptatibus nobis ex quidem.</span
+        >I’m passionate about coding because it combines analytical thinking
+        with creativity. I enjoy solving problems, finding clean solutions, and
+        turning ideas into working features. I’m persistent when things get
+        tricky and love collaborating with others to learn, improve, and build
+        better products together.</span
       >
-
       <a class="btn-container" href="#contact">
         <button>Let's talk</button>
       </a>
