added contact to main-content

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -2,3 +2,4 @@
 <app-why-me id="why-me"></app-why-me>
 <app-skills id="skills"></app-skills>
 <app-projects id="projects"></app-projects>
+<app-contact id="contact"></app-contact>
