--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -65,6 +65,7 @@ section {
         width: 100%;
         height: 100%;
         transition: opacity 125ms;
+        cursor: pointer;
       }
       .hover {
         opacity: 0;
