--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -3,7 +3,6 @@
 }
 
 section {
-  height: 100vh;
   padding-top: 80px;
   display: flex;
   flex-direction: column;
@@ -65,6 +64,9 @@ section {
         color: red;
       }
     }
+  }
+  textarea {
+    height: 226px;
   }
   input,
   textarea {
@@ -156,5 +158,63 @@ input[type="checkbox"] {
     &:hover {
       color: #f8f5ec;
     }
+  }
+}
+
+.toast-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(25, 25, 25, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: fadeInOutOverlay 3s forwards;
+  z-index: 999;
+  .toast {
+    background-color: #89bcd9;
+    color: #f8f5ec;
+    padding: 20px 36px;
+    border-radius: 30px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    animation: fadeInOutToast 3s forwards;
+    font-size: 16px;
+    z-index: 1999;
+  }
+}
+
+@keyframes fadeInOutToast {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  10% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  90% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+}
+
+@keyframes fadeInOutOverlay {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
