added functionality to links

--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="right-side">
     <div class="corner-icons">
-      <div class="icon-wrapper">
+      <a class="icon-wrapper" href="mailto:contact@matthias-hofer.com">
         <img
           src="./assets/img/icons/mail-icon.svg"
           alt="Mail"
@@ -20,8 +20,13 @@
           alt="Mail"
           class="hover"
         />
-      </div>
-      <div class="icon-wrapper">
+      </a>
+      <a
+        class="icon-wrapper"
+        href="https://github.com/matthofer"
+        target="_blank"
+        rel="noopener"
+      >
         <img
           src="./assets/img/icons/github-icon.svg"
           alt="GitHub"
@@ -32,8 +37,13 @@
           alt="GitHub"
           class="hover"
         />
-      </div>
-      <div class="icon-wrapper">
+      </a>
+      <a
+        class="icon-wrapper"
+        href="https://www.linkedin.com/"
+        target="_blank"
+        rel="noopener"
+      >
         <img
           src="./assets/img/icons/linkedin-icon.svg"
           alt="LinkedIn"
@@ -44,7 +54,7 @@
           alt="LinkedIn"
           class="hover"
         />
-      </div>
+      </a>
     </div>
     <div class="logo-container">
       <img src="./assets/img/icons/logo-icon.svg" alt="" />
