added custom scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,16 @@ h2 {
   font-size: 60px;
   color: #89bcd9;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2d383f;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #89bcd965;
+  border-radius: 4px;
+}
