--- a/src/app/main-content/skills/skills.component.html
+++ b/src/app/main-content/skills/skills.component.html
@@ -33,5 +33,10 @@
         once I'm finished.</span
       >
     </div>
+    <div>
+      <a class="btn-container" (click)="scrollToSection('contact')">
+        <button>Let's talk</button>
+      </a>
+    </div>
   </div>
 </section>
