--- a/src/app/main-content/why-me/why-me.component.html
+++ b/src/app/main-content/why-me/why-me.component.html
@@ -8,12 +8,13 @@
     <div class="right-side">
       <span
         >I’m passionate about coding because it combines analytical thinking
-        with creativity. I enjoy solving problems, finding clean solutions, and
-        turning ideas into working features. I’m persistent when things get
-        tricky and love collaborating with others to learn, improve, and build
-        better products together.</span
+        with creativity. <br />
+        I enjoy solving problems, finding clean solutions, and turning ideas
+        into working features. <br />
+        I’m persistent when things get tricky and love collaborating with others
+        to learn, improve, and build better products together.</span
       >
-      <a class="btn-container" href="#contact">
+      <a class="btn-container" (click)="scrollToSection('contact')">
         <button>Let's talk</button>
       </a>
     </div>
