--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -6,6 +6,11 @@
       alt=""
     />
     <img class="portrait" src="./assets/img/portrait.png" alt="" />
+    <img
+      class="mobile-portrait"
+      src="./assets/img/portrait-mobile.png"
+      alt=""
+    />
   </div>
   <div class="right-side">
     <div class="corner-icons">
@@ -68,5 +73,29 @@
     </a>
   </div>
 </section>
-
+<div class="burger-menu" (click)="toggleMenu()">
+  <img src="./assets/img/icons/burger-default.svg" alt="Menu" />
+</div>
+<div class="mobile-logo-container">
+  <img src="./assets/img/icons/logo-icon.svg" alt="" />
+  <span class="anta">M.Hofer</span>
+  <span class="blue">developer</span>
+</div>
+<nav class="mobile-nav" *ngIf="menuOpen">
+  <img src="./assets/img/background-objs/bg-shape.svg" alt="" />
+  <div class="nav-content">
+    <a (click)="scrollToSection('why-me')">Why me</a>
+    <a (click)="scrollToSection('skills')">Skills</a>
+    <a (click)="scrollToSection('projects')">Projects</a>
+    <a (click)="scrollToSection('contact')">Contact</a>
+    <div class="de-en-switch">
+      <span (click)="setLanguage('de')" [class.active]="activeLang === 'de'"
+        >DE</span
+      >
+      <span (click)="setLanguage('en')" [class.active]="activeLang === 'en'"
+        >EN</span
+      >
+    </div>
+  </div>
+</nav>
 <app-header class="sticky-header"></app-header>
