--- a/src/app/main-content/why-me/why-me.component.scss
+++ b/src/app/main-content/why-me/why-me.component.scss
@@ -64,3 +64,75 @@ h2 {
     }
   }
 }
+
+@media (max-width: 1368px) {
+  h2 {
+    margin-top: 60px;
+    margin-bottom: 40px;
+  }
+
+  .text-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 70px;
+    .left-side {
+      width: 90%;
+      justify-content: center;
+      margin-top: 0;
+      font-size: 22px;
+      > img {
+        width: 50px;
+        height: 40px;
+      }
+      > span {
+        margin-top: 8px;
+      }
+    }
+    .right-side {
+      width: 72%;
+      justify-content: center;
+      text-align: center;
+      > span {
+        font-size: 18px;
+      }
+      .btn-container {
+        > button {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1080px) {
+  .text-container {
+    .right-side {
+      width: 58%;
+    }
+  }
+}
+
+@media (max-width: 690px) {
+  .text-container {
+    gap: 50px;
+    .left-side {
+      font-size: 18px;
+      > img {
+        width: 40px;
+        height: 30px;
+      }
+      > span {
+        margin-top: 6px;
+      }
+    }
+    .right-side {
+      width: 80%;
+      > span {
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+@media (max-width: 470px) {
+}
